--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-scipy
-openpyxl
-plotly
+streamlit==1.37.0
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.9.0
+seaborn==0.13.2
+scipy==1.13.1
+openpyxl==3.1.2
+plotly==5.22.0
