--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.32.2
+streamlit
 pandas
-numpy==1.26.4
-matplotlib==3.8.3
-seaborn==0.13.2
-scipy==1.12.0
-openpyxl==3.1.2
+numpy
+matplotlib
+seaborn
+scipy
+openpyxl
